fix MercurialRepositoryTest.testBuildTagListOneMore failure with Mercurial 7.1.1 on macOS (#4850)
this avoids interactive mode and errors due to no user being set

fixes #4849