@@ -50,7 +50,9 @@ import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.TreeSet;
@@ -187,15 +189,18 @@ public class MercurialRepositoryTest {
      * @param args {@code hg} command arguments
      */
     public static void runHgCommand(File reposRoot, String... args) {
-        List<String> cmdargs = new ArrayList<>();
+        List<String> commandWithArgs = new ArrayList<>();
         MercurialRepository repo = new MercurialRepository();
 
-        cmdargs.add(repo.getRepoCommand());
-        cmdargs.addAll(Arrays.asList(args));
+        commandWithArgs.add(repo.getRepoCommand());
+        commandWithArgs.addAll(Arrays.asList(args));
 
-        Executor exec = new Executor(cmdargs, reposRoot);
+        final Map<String, String> env = new HashMap<>();
+        // Set the user to record commits in order to prevent hg commands entering interactive mode.
+        env.put("HGUSER", "Snufkin <snufkin@example.com>");
+        Executor exec = new Executor(commandWithArgs, reposRoot, env);
         int exitCode = exec.exec();
-        assertEquals(0, exitCode, "hg command '" + cmdargs + "' failed."
+        assertEquals(0, exitCode, "command '" + commandWithArgs + "' failed."
                 + "\nexit code: " + exitCode
                 + "\nstdout:\n" + exec.getOutputString()
                 + "\nstderr:\n" + exec.getErrorString());
@@ -299,10 +304,7 @@ public class MercurialRepositoryTest {
         String exp_str = "This is totally plaintext file.\n";
         byte[] buffer = new byte[1024];
 
-        /*
-         * In our test repository the file was renamed twice since
-         * revision 3.
-         */
+        // In our test repository the file was renamed twice since revision 3.
         InputStream input = mr.getHistoryGet(repositoryRoot.getCanonicalPath(),
                 "novel.txt", "3");
         assertNotNull(input);
@@ -350,8 +352,7 @@ public class MercurialRepositoryTest {
         assertNotNull(history);
         assertNotNull(history.getHistoryEntries());
         assertEquals(6, history.getHistoryEntries().size());
-        List<String> revisions = history.getHistoryEntries().stream().map(HistoryEntry::getRevision).
-                collect(Collectors.toList());
+        List<String> revisions = history.getHistoryEntries().stream().map(HistoryEntry::getRevision).toList();
         assertEquals(List.of(Arrays.copyOfRange(REVISIONS, 4, REVISIONS.length)), revisions);
     }
 
@@ -362,8 +363,7 @@ public class MercurialRepositoryTest {
         assertNotNull(history);
         assertNotNull(history.getHistoryEntries());
         assertEquals(3, history.getHistoryEntries().size());
-        List<String> revisions = history.getHistoryEntries().stream().map(HistoryEntry::getRevision).
-                collect(Collectors.toList());
+        List<String> revisions = history.getHistoryEntries().stream().map(HistoryEntry::getRevision).toList();
         assertEquals(List.of(Arrays.copyOfRange(REVISIONS, 0, 3)), revisions);
     }
 
@@ -374,8 +374,7 @@ public class MercurialRepositoryTest {
         assertNotNull(history);
         assertNotNull(history.getHistoryEntries());
         assertEquals(5, history.getHistoryEntries().size());
-        List<String> revisions = history.getHistoryEntries().stream().map(HistoryEntry::getRevision).
-                collect(Collectors.toList());
+        List<String> revisions = history.getHistoryEntries().stream().map(HistoryEntry::getRevision).toList();
         assertEquals(List.of(Arrays.copyOfRange(REVISIONS, 2, 7)), revisions);
     }
 
@@ -389,8 +388,7 @@ public class MercurialRepositoryTest {
         assertNotNull(history);
         assertNotNull(history.getHistoryEntries());
         assertEquals(5, history.getHistoryEntries().size());
-        List<String> revisions = history.getHistoryEntries().stream().map(HistoryEntry::getRevision).
-                collect(Collectors.toList());
+        List<String> revisions = history.getHistoryEntries().stream().map(HistoryEntry::getRevision).toList();
         assertEquals(List.of(Arrays.copyOfRange(REVISIONS, 2, 7)), revisions);
     }
 
@@ -443,8 +441,10 @@ public class MercurialRepositoryTest {
     }
 
     private static Stream<Triple<String, List<String>, List<String>>> provideParametersForPositiveAnnotationTest() {
-        return Stream.of(Triple.of("8:6a8c423f5624", List.of("7", "8"), List.of("8:6a8c423f5624", "7:db1394c05268")),
-                Triple.of("7:db1394c05268", List.of("7"), List.of("7:db1394c05268")));
+        return Stream.of(
+                Triple.of("8:6a8c423f5624", List.of("7", "8"), List.of("8:6a8c423f5624", "7:db1394c05268")),
+                Triple.of("7:db1394c05268", List.of("7"), List.of("7:db1394c05268"))
+        );
     }
 
     @ParameterizedTest
@@ -579,7 +579,7 @@ public class MercurialRepositoryTest {
         assertNotNull(tags);
         assertEquals(3, tags.size());
         expectedTags = List.of("start_of_novel", newTagName, branchTagName);
-        assertEquals(expectedTags, tags.stream().map(TagEntry::getTags).collect(Collectors.toList()));
+        assertEquals(expectedTags, tags.stream().map(TagEntry::getTags).toList());
 
         // cleanup
         IOUtils.removeRecursive(repositoryRootPath);
